--- a/config.json
+++ b/config.json
@@ -65,8 +65,8 @@
             "title": "Resources",
             "items": [
                 {
-                    "title": "Postman",
-                    "content": "https://postman.meraki.com",
+                    "title": "Postman v1",
+                    "content": "https://documenter.getpostman.com/view/897512/SzYXYfmJ",
                     "type": "url"
                 },
                 {
