--- a/docs/changelog/changelog-config.json
+++ b/docs/changelog/changelog-config.json
@@ -1,47 +1,1 @@
-{
-    "title": "Changelog",
-    "items": [
-        {
-            "title": "GA",
-            "items":[
-                {
-                    "title": "v0.9.0",
-                    "content": "v0.9.0.md"
-                },
-                {
-                    "content": "v0.8.0.md"
-                },
-                {
-                    "content": "v0.7.0.md"
-                },
-                {
-                    "content": "v0.6.0.md"
-                },
-                {
-                    "content": "v0.5.0.md"
-                },
-                {
-                    "content": "v0.4.0.md"
-                },
-                {
-                    "content": "v0.3.0.md"
-                },
-                {
-                    "content": "v0.2.0.md"
-                }
-            ],
-            "config":{
-                "showSubNavigation":false
-            }
-        },
-        {
-            "title": "Beta",
-            "items":[
-                {
-                    "content": "v1.0.0-beta.0.md"
-                }
-            ]
-        }
-      
-    ]
-}
+[object Object]
