--- a/config.json
+++ b/config.json
@@ -13,6 +13,7 @@
             "type": "oas",
             "content": "config/apiv1_draft_cat.json",
             "config": {
+                "expand":3,
                 "overview": "docs/overview.md",
                 "apiKeyGenerator": {
                     "$remoteModule": "config/api_key.js"
