--- a/config.json
+++ b/config.json
@@ -92,8 +92,8 @@
         },
         {
             "title": "Changelog",
-            "type": "config",
-            "content": "docs/changelog/changelog-config.json"
+            "type": "url",
+            "content": "https://developer.cisco.com/meraki/whats-new/"
         }
     ]
 }
