--- a/docs/changelog-archived/changelog-config.json
+++ b/docs/changelog-archived/changelog-config.json
@@ -5,6 +5,9 @@
             "title": "GA",
             "items":[
                 {
+                    "content": "v0.10.0.md"
+                },
+                {
                     "content": "v0.9.0.md"
                 },
                 {
