--- a/config.json
+++ b/config.json
@@ -31,6 +31,12 @@
                         "name":"Meraki Python Library",
                         "highlight":"python"
                     }
+                },
+                "variables": {
+                    "organizationId":"549236",
+                    "networkId":"L_646829496481104079",
+                    "serial":"Q2QN-9J8L-SLPD"
+            
                 }
             }
         },
