update sandbox vars

--- a/config.json
+++ b/config.json
@@ -34,7 +34,7 @@
                 },
                 "variables": {
                     "organizationId":"549236",
-                    "networkId":"L_ 646829496481105433",
+                    "networkId":"L_646829496481105433",
                     "serial":"Q2QN-9J8L-SLPD"
             
                 }
