--- a/config.json
+++ b/config.json
@@ -74,7 +74,7 @@
                     "content": "docs/Versioning.md"
                 },
                 {
-                    "title": "Path Changes (v0-v1)",
+                    "title": "Path Changes",
                     "content": "docs/v0-v1-path-operation-changes.md"
                 }
             ]
