--- a/.github/workflows/pubhub.yml
+++ b/.github/workflows/pubhub.yml
@@ -17,7 +17,7 @@ jobs:
       response: ${{steps.step1.response}}
     steps:
       - id: step1
-        uses: peter-evans/close-issue@v1
+        uses: fjogeleit/http-request-action@master
         with:
           url: 'https://cloudsso.cisco.com/as/token.oauth2?grant_type=client_credentials&client_id=${{secrets.client_id}}&client_secret=${{secrets.client_secret}}'
           method: POST
