--- a/.github/workflows/pubhub.yml
+++ b/.github/workflows/pubhub.yml
@@ -1,21 +1,19 @@
+name: pubhub-notification
 
-name: Close as a feature
-on:
-  push:
-    branches:
-    - master
+# Run this workflow every time a new commit pushed to your repository
+on: push
 
 jobs:
-  build:
+  notification:
+    name: notification
     runs-on: ubuntu-latest
-    outputs:
-      response: ${{steps.step1.response}}
     steps:
-      - id: step1
-        uses: fjogeleit/http-request-action@master
+      - name: CloudSSO
+        uses: fjogeleit/http-request-action@v1.5.0
         with:
           url: 'https://cloudsso.cisco.com/as/token.oauth2?grant_type=client_credentials&client_id=${{secrets.client_id}}&client_secret=${{secrets.client_secret}}'
           method: POST
+
 
 
            
