--- a/.github/workflows/pubhub.yml
+++ b/.github/workflows/pubhub.yml
@@ -7,12 +7,21 @@ jobs:
   notification:
     name: notification
     runs-on: ubuntu-latest
+    outputs:
+      response: ${{steps.step1.response}}
     steps:
       - name: CloudSSO
         uses: fjogeleit/http-request-action@v1.5.0
+          response: 
         with:
           url: 'https://cloudsso.cisco.com/as/token.oauth2?grant_type=client_credentials&client_id=${{secrets.client_id}}&client_secret=${{secrets.client_secret}}'
           method: POST
+
+
+
+           
+  
+
 
 
 
