--- a/.github/workflows/pubhub.yml
+++ b/.github/workflows/pubhub.yml
@@ -16,7 +16,7 @@ jobs:
           url: 'https://cloudsso.cisco.com/as/token.oauth2?grant_type=client_credentials&client_id=${{secrets.client_id}}&client_secret=${{secrets.client_secret}}'
           method: POST
       - name: echo
-        run: echo steps.step1.response 
+        run: echo {{steps.step1.response}}
   PubHub:
     name: trigger api
     runs-on: ubuntu-latest
