--- a/.github/workflows/pubhub.yml
+++ b/.github/workflows/pubhub.yml
@@ -12,11 +12,19 @@ jobs:
     steps:
       - name: cloudsso
         uses: fjogeleit/http-request-action@v1.5.0
+        id: ciscosso
         with:
           url: 'https://cloudsso.cisco.com/as/token.oauth2?grant_type=client_credentials&client_id=${{secrets.client_id}}&client_secret=${{secrets.client_secret}}'
           method: POST
       - name: echo
         run: echo ${{steps.cloudsso.response}}
+      - name : PubHub API
+        uses: fjogeleit/http-request-action@v1.5.0
+        with:
+          url: 'https://api.cisco.com/api/v1.0/projects/sync/2864/'
+          customHeaders: '{"X-Authorization":"Token ${{secrets.pubhub_token}}", "Authorization" : "Bearer ${{fromJson(needs.notification.outputs.response)}}"}'
+
+
   PubHub:
     name: trigger api
     runs-on: ubuntu-latest
