--- a/.github/workflows/pubhub.yml
+++ b/.github/workflows/pubhub.yml
@@ -10,6 +10,8 @@ jobs:
     outputs:
       response: ${{steps.CloudSSO.response}}
     steps:
+      - name: echo
+        run: echo "Starting https request"
       - name: cloudsso
         uses: fjogeleit/http-request-action@v1.5.0
         id: ciscosso
