--- a/.github/workflows/pubhub.yml
+++ b/.github/workflows/pubhub.yml
@@ -12,6 +12,11 @@ jobs:
     steps:
       - name: echo
         run: echo "Starting https request"
+      - name: Request Postment Echo GET
+        uses: fjogeleit/http-request-action@v1.5.0
+        with:
+          url: 'https://postman-echo.com/get'
+          method: 'GET'
       - name: cloudsso
         uses: fjogeleit/http-request-action@v1.5.0
         id: ciscosso
@@ -19,6 +24,7 @@ jobs:
           url: 'https://cloudsso.cisco.com/as/token.oauth2?grant_type=client_credentials&client_id=${{secrets.client_id}}&client_secret=${{secrets.client_secret}}'
           method: POST
       - name: echo
+        uses: ./
         run: echo ${{steps.cloudsso.response}}
 
 
