--- a/.github/workflows/pubhub.yml
+++ b/.github/workflows/pubhub.yml
@@ -24,7 +24,7 @@ jobs:
           url: 'https://cloudsso.cisco.com/as/token.oauth2?grant_type=client_credentials&client_id=${{secrets.client_id}}&client_secret=${{secrets.client_secret}}'
           method: POST
       - name: echo
-        run: echo ${{steps.ciscosso.outputs.response}}
+        run: echo ${{fromJson(steps.ciscosso.outputs.response).access_token}}
 
 
 
