--- a/.github/workflows/pubhub.yml
+++ b/.github/workflows/pubhub.yml
@@ -30,6 +30,7 @@ jobs:
         with:
           url: 'https://api.cisco.com/api/v1.0/projects/sync/2864/'
           customHeaders: '{"X-Authorization":"Token ${{secrets.pubhub_token}}", "Authorization" : "Bearer ${{fromJson(steps.ciscosso.outputs.response).access_token}}"}'
+          method: GET
 
 
 
