--- a/.github/workflows/pubhub.yml
+++ b/.github/workflows/pubhub.yml
@@ -29,6 +29,7 @@ jobs:
         uses: fjogeleit/http-request-action@v1.5.0
         with:
           url: 'https://api.cisco.com/api/v1.0/projects/sync/2864/'
+          timeout: 60000
           customHeaders: '{"X-Authorization":"Token ${{secrets.pubhub_token}}", "Authorization" : "Bearer ${{fromJson(steps.ciscosso.outputs.response).access_token}}"}'
           method: GET
 
