--- a/config.json
+++ b/config.json
@@ -99,6 +99,12 @@
         {
             "title": "Resources",
             "items": [
+                
+                {
+                    "title": "Postman Collection ",
+                    "content": "postman.md"
+                },
+                
                 {
                     "title": "Postman v1",
                     "content": "https://documenter.getpostman.com/view/897512/SzYXYfmJ",
