Preface with docs/

--- a/config.json
+++ b/config.json
@@ -102,7 +102,7 @@
                 
                 {
                     "title": "Postman Collection ",
-                    "content": "postman.md"
+                    "content": "docs/postman.md"
                 },
                 
                 {
