Added User Agent docs and API v1.19.0 snippets

--- a/config.json
+++ b/config.json
@@ -93,6 +93,15 @@
                             "content": "docs/ActionBatchesResources.md"
                         }
                     ]
+                },
+                {
+                    "title": "User Agents",
+                    "items": [
+                        {
+                            "title": "Overview",
+                            "content": "docs/UserAgents.md"
+                        }
+                    ]
                 }
             ]
         },
