--- a/config.json
+++ b/config.json
@@ -1,4 +1,7 @@
 {
+    "config": {
+        "useNPS": "caojnpr4so6v581tptl0"
+    },
     "items": [
         {
             "title": "Introduction",
